@@ -988,8 +988,8 @@ config side_engine::new_config() const
 		// Merge the faction data to res.
 		config faction = flg_.current_faction();
 		res["faction_name"] = faction["name"];
+		res["faction"] = faction["id"];
 		faction.remove_attributes("id", "name", "image", "gender", "type");
-		res.append(faction);
 	}
 
 	if (!cfg_.has_attribute("side") || cfg_["side"].to_int() != index_ + 1) {
